--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
             <button id="send_message" class=" d-inline-block send-btn" type="button"> Send</button>
         </section>
     </div>
-    <script src="./js/jquery-latest.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="chat.js"></script>
 </body>
 
