Somewhat started moderating, though not fully working yet

--- a/public/main.css
+++ b/public/main.css
@@ -34,7 +34,7 @@ html,body{
     /*height: 30%;*/
     background-color:#ccc;
     overflow:scroll;
-    scroll-behavior: smooth;
+    /*scroll-behavior: smooth;*/
 }
 
 .input{
